--- a/app/views/shared/_table_controls.html.erb
+++ b/app/views/shared/_table_controls.html.erb
@@ -3,10 +3,10 @@
   <button class="btn btn-sm btn-outline-light" id="table-deselectAll"><i class="far fa-check-circle mr-0"></i></button>
   <button class="btn btn-sm btn-outline-light" id="table-deleteSelected"><i class="fas fa-trash-alt mr-0"></i></button>
   <select id="table-show-amount" class="form-control form-control-sm mr-3" style="width: 150px;display:inline-block">
-    <option value="?per_page=25">Show 25 Per Page</option>
-    <option value="?per_page=50">Show 50 Per Page</option>
-    <option value="?per_page=100">Show 100 Per Page</option>
-    <option value="?per_page=500">Show 500 Per Page</option>
-    <option value="?per_page=1000">Show 1,000 Per Page</option>
+    <option value="?per_page=25">25 Per Page</option>
+    <option value="?per_page=50">50 Per Page</option>
+    <option value="?per_page=100">100 Per Page</option>
+    <option value="?per_page=500">500 Per Page</option>
+    <option value="?per_page=1000">1,000 Per Page</option>
   </select>
 </div>
