--- a/app/assets/stylesheets/table.css
+++ b/app/assets/stylesheets/table.css
@@ -92,7 +92,7 @@
   padding: 10px;
   text-transform: uppercase;
   border: 1px solid #d2d6de;
-  cursor: move;
+  cursor: pointer;
   width: 100%;
   text-align: left;
   margin-bottom: 10px;
@@ -103,9 +103,9 @@
   border-radius: 100%;
   border: 1px solid #d2d6de;
   margin-left: 5px;
+  margin-top: 5px;
   cursor: pointer;
   padding: 3px 5px;
-  opacity: 0.5;
   background: #fff;
   float: right;
 }
