--- a/app/assets/stylesheets/table.css
+++ b/app/assets/stylesheets/table.css
@@ -87,7 +87,7 @@
 
 .table-column-badge {
   font-size: 15px;
-  background: #f2f3f8;
+  background: #fafafa;
   color: #607aa0;
   padding: 10px;
   text-transform: uppercase;
