--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,7 +35,8 @@ a {
   float: left;
   padding: 7px 5px;
   margin-right: 10px;
-  font-size: 1.1em
+  font-size: 1.1em;
+  opacity: 0.7
 }
 
 .headline-title {
