columns no alerts

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -51,10 +51,10 @@
           <label>New Table Column</label>
           <input id="table-column-name" type="text" class="form-control mb-2" placeholder="Title">
           <input id="table-column-key" type="text" class="form-control mb-2" placeholder="Key">
-          <a href="#" class="btn btn-sm btn-outline-light" id="close-table-column">Close</a>
+          <a href="#" class="btn btn-sm btn-outline-light" id="close-table-column">Cancel</a>
           <div class="float-right">
-            <a href="#" class="btn btn-sm btn-outline-light" id="add-table-column">Add</a>
-            <a href="#" class="btn btn-sm btn-outline-light" id="update-table-column" style="display: none">Update</a>
+            <a href="#" class="btn btn-sm btn-warning" id="add-table-column">Add</a>
+            <a href="#" class="btn btn-sm btn-warning" id="update-table-column" style="display: none">Update</a>
           </div>
         </div>
         <div id="table-column-list"></div>
