--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -47,15 +47,7 @@
         <a href="#" class="btn btn-sm btn-primary float-right" id="saveTableColumns">Save</a>
         <a href="#" class="btn btn-sm btn-secondary" id="showAddColumn"><i class="fas fa-plus"></i> New Column</a>
         <hr>
-        <div id="table-new-column" class="card-block clearfix mb-3" style="display: none">
-          <label>New Table Column</label>
-          <input id="table-column-name" type="text" class="form-control mb-2" placeholder="Title">
-          <textarea id="table-column-key" type="text" class="tagifier mb-2" placeholder="Key"></textarea>
-          <a href="#" class="btn btn-sm btn-outline-light" id="close-table-column">Cancel</a>
-          <div class="float-right">
-            <a href="#" class="btn btn-sm btn-warning" id="add-table-column">Add</a>
-          </div>
-        </div>
+        <div id="addTableHTML"></div>
         <div id="table-column-list"></div>
         <div style="display: none">
           <%= form_with(model: @app, local: true, html: {id: 'table_column_save_form'}) do |form| %>
