--- a/app/assets/stylesheets/tagify.scss
+++ b/app/assets/stylesheets/tagify.scss
@@ -10,9 +10,9 @@
 
     $tag-text-color          : black !default;
     $tag-text-color--edit    : black !default;
-    $tag-bg                  : #E5E5E5 !default;
+    $tag-bg                  : #fafafa !default;
     $tag-hover               : #D3E2E2 !default;
-    $tag-remove              : #D39494 !default;
+    $tag-remove              : #cb2431 !default;
     $tag-remove-btn-bg       : none !default;
     $tag-remove-btn-bg--hover: darken($tag-remove, 8) !default;
     $tag-invalid-color       : $tag-remove !default;
@@ -30,7 +30,7 @@
     --tag-inset-shadow-size    : #{$tag-inset-shadow-size};
     --tag-invalid-color        : #{$tag-invalid-color};
     --tag-invalid-bg           : #{$tag-invalid-bg};
-    --tag-remove-bg            : #{rgba($tag-remove, .3)};
+    --tag-remove-bg            : #{rgba($tag-remove, 1)};
     --tag-remove-btn-bg        : #{$tag-remove-btn-bg};
     --tag-remove-btn-bg--hover : #{$tag-remove-btn-bg--hover};
 
@@ -172,6 +172,7 @@
                 content: '';
                 position: absolute;
                 border-radius: 4px;
+                border: 1px solid #d2d6de;
                 left:0; top:0; right:0; bottom:0;
                 z-index: -1;
                 pointer-events:none;
@@ -189,8 +190,8 @@
                     $size: -$tagMargin/2;
                     $size: -2px;
                     top:$size; right:$size; bottom:$size; left:$size;
-                    box-shadow: 0 0 0 $tag-inset-shadow-size $tag-hover inset;
-                    box-shadow: 0 0 0 var(--tag-inset-shadow-size) var(--tag-hover) inset;
+                    // box-shadow: 0 0 0 $tag-inset-shadow-size $tag-hover inset;
+                    // box-shadow: 0 0 0 var(--tag-inset-shadow-size) var(--tag-hover) inset;
                   //  box-shadow: 0 0 0 0 $tag-remove inset
                 }
                 // background:nth($tagColor,2);
@@ -257,6 +258,7 @@
         cursor        : pointer;
         margin-right  : $size/3;
         margin-left   : -$size/3;
+        margin-top: -4px;
         transition    : .2s ease-out;
 
         &::after{
@@ -264,13 +266,15 @@
         }
 
         &:hover{
-            color:white;
-            background:$tag-remove-btn-bg--hover;
-            background:var(--tag-remove-btn-bg--hover);
-            // + span{ box-shadow: 0 0 0 2px $tag-remove inset; transition:.2s; }
+            font-weight: bold;
+            color: #fff;
+            border-color: #000;
+            cursor: pointer;
             + div{
-                > span{ opacity:.5; } // filter:blur(.2px);
+                > span{ opacity:.9;color: #fff; } // filter:blur(.2px);
                 &::before{
+                  color: #fff;
+                  border-color: #cb2431;
                     box-shadow: 0 0 0 $tag-inset-shadow-size rgba($tag-remove, .3) inset !important;
                     box-shadow: 0 0 0 var(--tag-inset-shadow-size) var(--tag-remove-bg) inset !important;
                     transition:.2s;
