--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -45,7 +45,7 @@
     <div id="popup-content">
       <div id="popup-manage-table" class="tab" style="display: none">
         <a href="#" class="btn btn-sm btn-primary float-right" id="saveTableColumns">Save</a>
-        <a href="#" class="btn btn-sm btn-secondary" id="showAddColumn"><i class="fas fa-plus"></i> New Column</a>
+        <a href="#" class="btn btn-sm btn-secondary" id="showAddColumn"><i class="fas fa-plus"></i> New</a>
         <hr>
         <div id="addTableHTML"></div>
         <div id="table-column-list"></div>
