--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,7 +1,7 @@
 <h2 class="headline-title">Settings</h2>
 <hr>
 <div class="card-block has-footer">
-  <%= form_with(model: @settings, local: true, html: {autocomplete: 'off'}) do |form| %>
+  <%= form_with(model: @settings, remote: true, html: {autocomplete: 'off'}) do |form| %>
     <div class="row">
       <div class="col-md-6 mb-4">
         <label>Timezone</label>
