--- a/app/assets/stylesheets/main-navbar.css
+++ b/app/assets/stylesheets/main-navbar.css
@@ -1,4 +1,4 @@
-#main-navbar {
+/* #main-navbar {
   background: #fff;
   padding: 0;
   border-bottom: 1px solid #d2d6dd
@@ -17,7 +17,7 @@
 #main-top-nav a.active {
   background: #f2f3f8;
   border-radius: 4px;
-  box-shadow: 0 0 0 1px #d2d6de;
+  box-shadow: 0 0 0 1px var(--border-color);
   color: #12263f
 }
 
@@ -47,4 +47,41 @@
   display: block;
   margin-left: 15px;
   margin-top: 4px;
+} */
+#header {
+  background: #12263f;
+}
+
+#header .navbar {
+  padding: 20px 30px
+}
+
+#header a {
+  padding: 5px 10px;
+  color: #fff;
+  margin-left: 5px;
+}
+
+#header .navbar-nav li:last-child a {
+  padding-right: 0;
+}
+
+#header a.active {
+  background: #1c4270;
+  border-radius: 4px;
+}
+
+#header .container {
+  padding: 0;
+}
+
+#header .navbar-brand {
+  padding: 0;
+  margin: 0;
+}
+
+#header .navbar-brand img {
+  width: 100%;
+  max-width: 204px;
+  display: block;
 }
