--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -22,6 +22,6 @@
   margin-right: 30px;
   margin-bottom: 50px;
   width: 90px;
-  box-shadow: 0 2px 4px #d2d6de;
+  box-shadow: 0 2px 4px var(--border-color);
   border: 2px solid #fff;
 }
