--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,7 +1,7 @@
 <h2 class="headline-title float-left"><%= image_tag("apps/#{@app.name}.png", class: 'app-image-headline') %> <%= appSingle(@app.name)['displayName'] %></h2>
 
 <div class="webhook-options clearfix">
-  <a href="/export?id=<%= @app.id %>" download class="btn btn-outline-light mr-2 float-right"><i class="fas fa-download mr-0"></i></a>
+  <a href="/export?id=<%= @app.id %>" download class="btn btn-outline-light float-right"><i class="fas fa-download mr-0"></i></a>
   <select id="activity-date-picker" data-url="<%= request.base_url %>/database/<%= @app.slug %>" class="form-control float-right mr-2">
     <option value="?timeframe=7-days">Last 7 Days</option>
     <option value="?timeframe=30-days" selected>Last Month</option>
@@ -14,7 +14,7 @@
 <hr>
 
 <div class="card-block chartjs mb-3">
-  <%= line_chart @request_activity, height: '200px' %>
+  <%= line_chart @request_activity %>
 </div>
 
 <div id="search-table" class="float-right">
