--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -11,10 +11,8 @@
   <table class="table">
     <thead>
       <tr>
-        <th class="table-name">Name</th>
-        <th class="table-total">Rows</th>
-        <th class="table-url">Webhook URL</th>
-        <th class="table-total">Zapier</th>
+        <th class="table-name">App</th>
+        <th class="table-total">Databases</th>
         <th style="width: 50px"></th>
       </tr>
     </thead>
@@ -27,17 +25,7 @@
             <a href="/campaigns/<%= @campaign.slug %>/<%= app.slug %>"><%= appSingle(app.name)['displayName'] %></a>
           </td>
           <td class="table-total text-center">
-            <%= number_to_human(Request.where(app_id: app.id).count, :format => '%n%u', :units => { :thousand => 'K', :million => 'M' }) %>
-          </td>
-          <td class="table-url">
-            <input class="form-control form-control-sm click-to-copy" value="<%= "#{request.base_url}/cv/#{@campaign.slug}/#{app.slug}" %>" />
-          </td>
-          <td class="table-total">
-            <% if app.connected.present? %>
-              <strong class="text-muted"><i class="fas fa-check-circle mr-1" style="color: #a6ca46"></i></strong>
-            <% else %>
-              <a href="https://zapier.com/zapbook/create/<%= appSingle(app.name)['zapierAPI'] %>/WebHookAPI" target="_blank" class="btn btn-sm btn-zapier btn-block">Connect</a>
-            <% end %>
+            <%= number_to_human(Database.where(app_id: app.id).count, :format => '%n%u', :units => { :thousand => 'K', :million => 'M' }) %>
           </td>
           <td class="text-right">
             <div class="dropdown dropleft">
