--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -36,7 +36,7 @@
                 <a class="dropdown-item text-muted" href="/campaigns/<%= @campaign.slug %>/<%= app.slug %>"><i class="far fa-eye mr-1"></i> View</a>
                 <a class="dropdown-item text-muted" href="/campaigns/<%= @campaign.slug %>/<%= app.slug %>/edit"><i class="far fa-edit mr-1"></i> Edit</a>
                 <a class="dropdown-item text-muted" href="/export?id=<%= app.id %>" download><i class="fas fa-download mr-1"></i> Export</a>
-                <%= link_to raw('<i class="far fa-trash-alt mr-1"></i> Delete'), app, method: :delete, data: { confirm: 'Are you sure this will also delete all associated records?' }, class: 'dropdown-item text-muted' %>
+                <%= link_to raw('<i class="far fa-trash-alt mr-1"></i> Delete'), [@campaign, app], method: :delete, data: { confirm: 'Are you sure this will also delete all associated records?' }, class: 'dropdown-item text-muted' %>
               </div>
           </td>
         </tr>
