--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,8 @@
       <%= yield %>
     </main>
 
+    <div class="modal fade hide" id="modal-window" tabindex="-1" role="dialog" aria-hidden="true"></div>
+
     <div id="notice" class="notification" style="display: none"><%= notice %></div>
     <div id="alert" class="notification" style="display: none"><%= alert %></div>
 
