--- a/app/views/databases/_edit.html.erb
+++ b/app/views/databases/_edit.html.erb
@@ -1,12 +1,12 @@
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <h5 class="modal-title">Add Database</h5>
+      <h5 class="modal-title">Edit Database</h5>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-    <%= form_with(model: @database, url: "/create/#{@campaign.slug}/#{@app.slug}/database", local: false, remote: true) do |form| %>
+    <%= form_with(model: [@campaign, @app, @database], local: false, remote: true) do |form| %>
       <div class="modal-body">
         <div class="row">
           <% if @database.errors.any? %>
@@ -31,5 +31,6 @@
         <button class="btn btn-primary">Save</button>
       </div>
     <% end %>
+
   </div>
 </div>
