--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to raw('<i class="fas fa-plus mr-0"></i>'), new_campaign_path, class: 'btn btn-warning float-right' %>
+<%= link_to raw('<i class="fas fa-plus mr-1"></i> New Campaign'), new_campaign_path, class: 'btn btn-primary float-right' %>
 <h2 class="headline-title">Campaigns</h2>
 <hr />
 
