--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,8 +1,8 @@
 <h2 class="headline-title float-left"><%= @campaign.name %></h2>
 
 <div class="webhook-options float-right clearfix mb-3">
-  <a href="/campaigns/<%= @campaign.slug %>/edit" class="btn btn-warning mr-2"><i class="fas fa-plus mr-0"></i></a>
-  <a href="/campaigns/<%= @campaign.slug %>/edit" class="btn btn-outline-light"><i class="fas fa-cog mr-0"></i></a>
+  <a href="/campaigns/<%= @campaign.slug %>/edit" class="btn btn-primary mr-2"><i class="fas fa-plus mr-1"></i> Add App</a>
+  <a href="/campaigns/<%= @campaign.slug %>/edit" class="btn btn-outline-light"><i class="fas fa-cog mr-1"></i> Edit</a>
 </div>
 
 <hr>
